# automake_bison_example

./: README.md  configure.ac  infile.txt
src/: Makefile.am  lexcalc.l  parcalc.y
